Add py files in doc directories to pep8 check
Change-Id: Idb4f8864ab51f5e4ee2eef7745d40d5d8b5e57ce

--- a/tox.ini
+++ b/tox.ini
@@ -78,7 +78,7 @@ commands = python {toxinidir}/tests/ci/sync_requirements.py {posargs}
 [flake8]
 ignore = H703,H105
 show-source = true
-exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,tools,build,setup.py
+exclude=.venv,.git,.tox,dist,*lib/python*,*egg,tools,build,setup.py
 
 [hacking]
 import_exceptions = rally.common.i18n
