[ci] Change image name for senlin job
The nae of image is change, so we need to change it in our task file.

Change-Id: I070cb920cf11bf6c718758be8ac5d95379a5a75d

--- a/rally-jobs/rally-senlin.yaml
+++ b/rally-jobs/rally-senlin.yaml
@@ -19,7 +19,7 @@
           properties:
             name: cirros_server
             flavor: 1
-            image: "cirros-0.3.5-x86_64-disk.img"
+            image: "cirros-0.3.5-x86_64-disk"
             networks:
               - network: private
       sla:
