--- a/rally-jobs/rally-ironic.yaml
+++ b/rally-jobs/rally-ironic.yaml
@@ -3,11 +3,11 @@
   IronicNodes.{{s}}:
     -
       args:
-        driver: "pxe_ssh"
+        driver: "fake"
       runner:
         type: "constant"
-        times: 10
-        concurrency: 2
+        times: 100
+        concurrency: 20
       context:
         users:
           tenants: 5
